# jed

./: .gitmodules  CMakeLists.txt  README.md
jed/: CMakeLists.txt  Help.txt  active_folder.h  buffer.cpp  buffer.h  colors.cpp  colors.h  engine.cpp  engine.h  jed.icns  jed_syntax.json  jedicon.cpp  jedicon.h  jedicon.xcf  main.cpp  mouse.cpp  mouse.h  pdcex.h  pipe.h  pref_file.cpp  process.h  settings.cpp  settings.h  syntax.json  syntax_highlight.cpp  syntax_highlight.h  utils.cpp  utils.h
